--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-#wrapper{
-    width: 1000px;
-}
-
 #footer{
     text-align: center;
     padding-top: 50px;
@@ -23,7 +19,7 @@
 
 #main-spacer{
     width: 100%;
-    height: 400px;
+    height: 600px;
     background-image: linear-gradient(lightblue, white);
     z-index: -1;
 }
@@ -37,16 +33,35 @@
 
 #sidebar{
     background-color: lightgreen;
-    
     border-radius: 20px;
     border-width: 100px;
 }
 
 #main{
-    margin-right: 200px;
-    padding-left: 400px;
+    margin-right: px;
+    padding-left: px;
 }
 
 #header{
-    margin-left: 200px;
+    margin-left: px;
+}
+
+.subtext{
+    padding-bottom: 10px;
+}
+
+#subtitle{
+    padding-top: 25px;
+}
+
+#title{
+    padding-top: 5px;
+}
+
+.comments{
+    background-color: green;
+}
+
+a{
+    color: white;
 }
