--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@
     background-color: lightgreen;
     border-radius: 20px;
     border-width: 100px;
+    padding-left: 65px;
 }
 
 #main{
@@ -64,4 +65,8 @@
 
 a{
     color: white;
+}
+
+ul{
+    list-style: none;
 }
